--- a/res/layout/fragment_page.xml
+++ b/res/layout/fragment_page.xml
@@ -1,6 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:textColor="#000" />
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/hscrollview"
+    android:scrollbars="none" >
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/vorspeisenTitel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/myPrimaryColor"
+            android:gravity="center_horizontal"
+            android:text="Vorspeisen"
+            android:textSize="20sp" />
+
+        <TableLayout
+            android:id="@+id/vorspeisen"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vorspeisenTitel"
+            android:orientation="vertical" >
+        </TableLayout>
+
+        <TextView
+            android:id="@+id/hauptspeisenTitel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vorspeisen"
+            android:layout_marginBottom="10dp"
+            android:background="@color/myPrimaryColor"
+            android:gravity="center_horizontal"
+            android:text="Hauptspeisen"
+            android:textSize="20sp" />
+
+        <TableLayout
+            android:id="@+id/hauptspeisen"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hauptspeisenTitel"
+            android:orientation="vertical" >
+        </TableLayout>
+
+        <TextView
+            android:id="@+id/nachspeisenTitel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hauptspeisen"
+            android:layout_marginBottom="10dp"
+            android:background="@color/myPrimaryColor"
+            android:gravity="center_horizontal"
+            android:text="Nachspeisen"
+            android:textSize="20sp" />
+
+        <TableLayout
+            android:id="@+id/nachspeisen"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nachspeisenTitel"
+            android:orientation="vertical" >
+        </TableLayout>
+    </RelativeLayout>
+
+</ScrollView>
