Drawer now "draws" over the Tabs and the Content ;D

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,12 +11,6 @@
         android:layout_height="wrap_content"
         layout="@layout/toolbar_default" />
 
-    <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
-        android:id="@+id/sliding_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/myPrimaryColor" />
-
     <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer"
@@ -24,12 +18,24 @@
         android:layout_height="0dp"
         android:layout_weight="1" >
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/background_material_light" >
-        </android.support.v4.view.ViewPager>
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
+                android:id="@+id/sliding_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/myPrimaryColor" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/background_material_light" >
+            </android.support.v4.view.ViewPager>
+        </LinearLayout>
 
         <fragment
             android:id="@+id/fragment_drawer"
