--- a/res/layout/fragment_page_entry.xml
+++ b/res/layout/fragment_page_entry.xml
@@ -2,7 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="horizontal" >
+
+    <ImageView
+        android:id="@+id/fragment_page_entry_imageView"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:contentDescription="SpeiseBild"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp" />
+
+    <TextView
+        android:id="@+id/fragment_page_entry_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="17dp"
+        android:textColor="@color/abc_primary_text_material_light"
+        android:textSize="15sp" />
 
 </LinearLayout>
