--- a/res/layout/activity_first_launch.xml
+++ b/res/layout/activity_first_launch.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:padding="1dp"
     tools:context="${relativePackage}.${activityClass}" >
 
