--- a/res/layout/activity_first_launch.xml
+++ b/res/layout/activity_first_launch.xml
@@ -4,27 +4,24 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:padding="1dp"
+    android:gravity="center_vertical"
     tools:context="${relativePackage}.${activityClass}" >
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:text="@string/firstLaunch"
+        android:layout_marginBottom="40dp"
         android:textColor="@color/abc_primary_text_material_light" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
+    <Button
+        android:id="@+id/okay"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-100dp" >
-        <Button
-            android:id="@+id/okay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Okay" />
-    </RelativeLayout>
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/roundedbutton"
+        android:text="Okay"
+        android:textColor="@color/primary_text_default_material_dark" />
 
 </LinearLayout>
